Implemented Create (Lost Person + Found Person).

--- a/IFoundBackend/appsettings.json
+++ b/IFoundBackend/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "IFoundDB": "Data Source=LHE-LT-UKABIR;Initial Catalog=IFound;Integrated Security=True"
+  }
 }
