Updated to EF 7 + added statistics +added form fields

--- a/IFoundBackend/appsettings.json
+++ b/IFoundBackend/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "IFoundDB": "Data Source=LHE-LT-UKABIR;Initial Catalog=IFound;Integrated Security=True"
+    "IFoundDB": "Data Source=LHE-LT-UKABIR;Initial Catalog=IFound;Integrated Security=True;Encrypt=False"
   }
 }
