remove redundant code

--- a/IFoundBackend/appsettings.json
+++ b/IFoundBackend/appsettings.json
@@ -7,7 +7,17 @@
     }
   },
   "AllowedHosts": "*",
+  "MXFaceConfiguration": {
+    "lostGroupId": 22,
+    "foundGroupId": 23,
+    "confidenceThresh": 100,
+    "subscriptionKey": "XYiyrB4lAxfLx8F4o8-nAjyNS0wKw1148",
+    "URL": "https://faceapi.mxface.ai/api/v3/"
+  },
   "ConnectionStrings": {
-    "IFoundDB": "Data Source=LHE-LT-UKABIR;Initial Catalog=IFound;Integrated Security=True;Encrypt=False"
+    "IFoundDB": "Data Source=sql-server-algo.database.windows.net;Initial Catalog=IFound;User ID=usman-admin"
   }
-}
+
+} 
+
+//"IFoundDB": "Data Source=LHE-LT-UKABIR;Initial Catalog=IFound;Integrated Security=True;Encrypt=False"
