Added Authentication & Authorization on Controller actions

--- a/IFoundBackend/appsettings.json
+++ b/IFoundBackend/appsettings.json
@@ -15,7 +15,12 @@
     "URL": "https://faceapi.mxface.ai/api/v3/"
   },
   "ConnectionStrings": {
-    "IFoundDB": "Data Source=sql-server-algo.database.windows.net;Initial Catalog=IFound;User ID=usman-admin"
+    "IFoundDB": "Data Source=sql-server-algo.database.windows.net;Initial Catalog=IFound;User ID=usman-admin;Password=webdir123R@"
+  },
+  "JWT": {
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:5000",
+    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
   }
 
 } 
