External authentication and some apis added.

--- a/IFoundBackend/appsettings.json
+++ b/IFoundBackend/appsettings.json
@@ -21,6 +21,10 @@
     "ValidAudience": "http://localhost:4200",
     "ValidIssuer": "http://localhost:5000",
     "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
+  },
+  "GoogleAuth2": {
+    "ClientID": "887686495485-gatm0h5hk2p938qt3cbvva26n283m2o7.apps.googleusercontent.com",
+    "ClientSecret": "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"
   }
 
 } 
