--- a/IFoundBackend/IFoundBackend.csproj
+++ b/IFoundBackend/IFoundBackend.csproj
@@ -5,6 +5,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Google.Apis.Auth" Version="1.61.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="6.0.20" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.20" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.16" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.16" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.12" />
@@ -22,7 +25,6 @@
 
 	<ItemGroup>
 		<Folder Include="Model\Answers\" />
-		<Folder Include="Auth\" />
 	</ItemGroup>
 
 
